--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 					<label style="font-size:30px; color:green;">DA</label>
 					<label style="font-size:30px; color:#FFD700;">TA</label>
-					<label style="font-size:30px; color:#3333AA;">SHOW</label>
+					<label style="font-size:30px; color:#3333AA;">SHOW &#174;</label>
 					<br/>
 					<l id="bSearch"> <input type="text" id="txtSearch" value="" placeholder="Digita aqui na pesquisa" style="width:150px; height:34px;"><button id="btnSearch" style="height:34px; width:40px;" class="btn btn-info"> <i class="fa fa-search"></i></button> </l>
 					<select id="selMycodeTextGroup" name="selMycodeTextGroup" style="height:34px; display:'none';">
@@ -34,14 +34,14 @@
 						<option value="1">bíblia</option>
 						<option value="2">imagem</option>
 					</select>
-					<button id="btnGear" class="btn btn-default" style="display:'none';"> <i class="fa fa-align-justify"></i></button>
+					<button id="btnGear" class="btn btn-default" style="display:'none';"> <i class="fa fa-cog"></i></button>
 
 			</td></tr></table>
 		</div>
 		
 		<div id="divconfig" style="display:none;">
-			<br/><a href="config.html" target="_datashow"><button id="btnIndexConfigurar" class="btn btn-success" style="padding:9px 15px 9px 15px;"> 1. Configurar <i class="fa fa-forward"></i> </button></a>
-			<button id="btnConfigSearch" class="btn btn-success" style="padding:9px 15px 9px 15px; display:none;"> 2. Configuração terminou? </button>
+			<br/><button id="btnIndexConfigurar" class="btn btn-success" style="padding:9px 15px 9px 15px;"> 1. Configurar <i class="fa fa-forward"></i> </button>
+			<!-- br/><br/><a href="#" onclick="window.open('configresult.html');"><button id="btnConfigResult" class="btn btn-success" style="padding:9px 15px 9px 15px; display:'none';"> 2. Mostrar Configuração <i class="fa fa-forward"></i> </button></a -->
 		</div>
 		
 		
@@ -119,12 +119,12 @@
 			<br/><br/>
 			<button id="btnFreeze" class="btn btn-info" style="width:150px;"> <i class="fa fa-lock"></i> Congela Tela 2</button>
 			<br/><br/>
-			<a href="config.html" target="_datashow"><button id="btnIndexConfigurar" class="btn btn-success" style="width:150px;"> Configurar <i class="fa fa-forward"></i> </button></a>
+			<!-- br/><button id="btnIndexConfigurar2" class="btn btn-success" style="padding:9px 15px 9px 15px;"> 1. Configurar <i class="fa fa-forward"></i> </button -->
 			<!-- button id="btnCancelGear" class="btn btn-info" style="padding:9px 15px 9px 15px; width:150px;"> <i class="fa fa-times"></i> Fechar</button -->
 			<br/><br/>
 
 			<br/><button id="btnDropDb" class="btn btn-default" style="display:'none'; width:111px;"> <i class="fa fa-remove"></i> Drop DB</button>
-			<br/><br/><i>Contato: enio.francisco@gmail.com &#174;; +55(11)95239-2000; Brasil</i>
+			<br/><br/><i>Contato: enio.francisco@gmail.com &#174; +55(11)95239-2000; Brasil; v29.04.22.17.00</i>
 			<div style="display:none;">
 				<br/><button id="btnSelectCountAll" class="btn btn-default" style="display:'none'; width:111px;"> <i class="fa fa-asterisk"></i> Count All</button>
 				<br/><button id="btnDeleteLirics" class="btn btn-default" style="display:'none'; width:111px;"> <i class="fa fa-minus"></i> Clear Lirycs</button>
